k8s/apps/internal/CTF/FileUpload1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload1
  namespace: ctf
spec:
  selector:
    matchLabels:
      app: upload1
  template:
    metadata:
      labels:
        app: upload1
    spec:
      containers:
        - name: upload1
          image: registry.oplabs.us:5050/root/ctf-web-fu1:latest
          pull-policy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
