k8s/apps/internal/CTF/FileUpload1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload1
  namespace: ctf
spec:
  selector:
    app: upload1
  ports:
    - port: 80
      targetPort: 80
